--- a/AP/docker-compose.yml
+++ b/AP/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   chirpstack-network-server:
     image: chirpstack/chirpstack-network-server:3
     container_name: chirpstack-network-server
+    restart: unless-stopped 
     volumes:
       - ./configuration/chirpstack-network-server:/etc/chirpstack-network-server
     depends_on:
@@ -13,6 +14,7 @@ services:
   chirpstack-application-server:
     image: chirpstack/chirpstack-application-server:3
     container_name: chirpstack-application-server
+    restart: unless-stopped
     ports:
       - 8080:8080
     volumes:
@@ -23,6 +25,7 @@ services:
   chirpstack-gateway-bridge:
     image: chirpstack/chirpstack-gateway-bridge:3
     container_name: chirpstack-gateway-bridge
+    restart: unless-stopped 
     ports:
       - 1700:1700/udp
     volumes:
@@ -33,6 +36,7 @@ services:
   postgresql:
     image: postgres:9.6-alpine
     container_name: postgresql
+    restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=root
     volumes:
@@ -42,12 +46,14 @@ services:
   redis:
     image: redis:5-alpine
     container_name: redis
+    restart: unless-stopped
     volumes:
       - redisdata:/data
 
   mosquitto:
     image: eclipse-mosquitto:2
     container_name: mosquitto
+    restart: unless-stopped
     ports:
       - 1883:1883
     volumes: 
